--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ fabric.properties
 ### PyCharm Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
+#*.iml
 # modules.xml
 .idea/misc.xml
 .idea/nbtsgui.iml
@@ -135,3 +135,5 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/macos,django,windows,pycharm,visualstudiocode
 hlr.sqlite3
+main_app/testdatabase/
+templates/
